# ValidationWorkspace

./: .gitignore  README.md  pyproject.toml  run_services.sh
.github/workflows/: ci-cd.yml
dut/: dut_service.proto  dut_service.py  dut_service_pb2.py  dut_service_pb2_grpc.py  requirements.txt
gui/: harness_gui.py
harness/: harness_service.proto  harness_service.py  harness_service_pb2.py  harness_service_pb2_grpc.py
instruments/: instrument_service.proto  instrument_service.py  instrument_service_pb2.py  instrument_service_pb2_grpc.py
tests/: test_unit.py
